2008-06-26  Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/demos/sokoban.lisp (init-sokoban):
	do not set *display*
	(sokoban): use xlib:with-open-display;
	handle numeric keypad

2008-06-25  Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/clx.f (change_property): remove
	(SET-WM-HINTS, CHANGE-PROPERTY): use XChangeProperty() directly
	and ignore its return value which is always 1
	(RECOLOR-CURSOR): fix background handling

2008-06-25  Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/clx.lisp (with-open-display): define & export
	* modules/clx/new-clx/demos/bball.lisp:
	* modules/clx/new-clx/demos/bwindow.lisp:
	* modules/clx/new-clx/demos/clclock.lisp:
	* modules/clx/new-clx/demos/greynetic.lisp:
	* modules/clx/new-clx/demos/hanoi.lisp:
	* modules/clx/new-clx/demos/koch.lisp:
	* modules/clx/new-clx/demos/petal.lisp:
	* modules/clx/new-clx/demos/plaid.lisp:
	* modules/clx/new-clx/demos/qix.lisp:
	* modules/clx/new-clx/demos/recurrence.lisp: use it

2008-06-25  Sam Steingold  <sds@gnu.org>

	move WM-HINTS to C to better handle word size differences
	* modules/clx/new-clx/clx.f (lookup_display, change_property): add
	(CHANGE-PROPERTY): use change_property()
	(xlib_error_handler, xlib_io_error_handler): use lookup_display()
	(check_wmh_initial_state, check_wmh_flag): add DEFCHECKERs
	(WM-HINTS, SET-WM-HINTS): implement
	* modules/clx/new-clx/clx.lisp (wm-hints, set-wm-hints)
	(decode-wm-hints, encode-wm-hints): remove

2008-06-25  Sam Steingold  <sds@gnu.org>

	* modules/clx/mit-clx/display.lisp (with-open-display): define
	* modules/clx/mit-clx/package.lisp (with-open-display): export

2008-06-25  Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/clx.f (CHANGE-PROPERTY):
	check the return value of XChangeProperty()
	(DISPLAY-VENDOR-NAME): return just one value

2008-06-24  Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/clx.f (GET-PROPERTY):
	use uint16 and uint32 instead of unsigned short and unsigned long
	for reliability on 64-bit platforms
